--- a/langs/en.json
+++ b/langs/en.json
@@ -1447,7 +1447,9 @@
     "menu.utils": "Utilities",
     "menu.fast_travel": "Fast Travel",
     "menu.search_placeholder": "Search items. Separated by ;",
+    "menu.query_suggestions_hotkey": "Search in suggestions, Press {↑} {↓} {Enter} for general search.",
     "menu.auto_enable_sold_items": "Automatically enable sold items",
+    "menu.back_to_top": "Scroll back to top (Draggable)",
     "map.remove_add": "Remove/Add from map",
     "map.remove": "Remove from map",
     "map.copy_link": "Copy link",
@@ -1661,6 +1663,7 @@
     "menu.show_import_export": "Show import/export settings",
     "menu.show_debug": "Show debug settings",
     "menu.enable_cycle_input": "Enable manual cycle input",
+    "menu.override_browser_search": "Override browser's search",
     "menu.show_all_cycles_markers": "Show all markers",
     "menu.enable_context_menu": "Enable context menu",
     "menu.marker_color.header": "Item marker colors",
@@ -1750,6 +1753,7 @@
     "help.item_unavailable": "This item is unavailable due to a game bug or being undiscovered.",
     "help.item_random": "This item is random and does not have static spawn point.",
     "help.jewelry_random_timestamp": "This item is random today, next static spawn is {day}",
+    "help.jewelry_not_random_timestamp": "Toggles whether this item should be visible on the map. Next static spawn is {day}",
     "help.clear_important_items": "Clears the highlight from all markers marked as important.",
     "help.item_category_unavailable_items": "Toggles whether this set should be visible on the map. This set contains one or more items that are randomized, or are unavailable due to a game bug.",
     "help.item_category_bugged_items": "Toggles whether this set should be visible on the map. This set contains one or more items that are unavailable due to a game bug.",
@@ -1767,6 +1771,7 @@
     "help.show_import_export": "Toggles whether the import/export settings should be visible in the menu.",
     "help.show_debug": "Toggles whether the debug settings should be visible in the menu.",
     "help.enable_cycle_input": "Toggles whether the manual cycle inputs should be visible in the menu.",
+    "help.override_browser_search": "Toggles whether the map should override browser's built-in search feature.",
     "help.show_all_cycles_markers": "Toggles whether all markers from each cycle should be visible.",
     "help.enable_context_menu": "Toggles whether context menu (right-click) is enabled.",
     "help.marker_color": "Set a color theme or a specific color for item markers. “Auto” options switch color in dark mode.",
