--- a/langs/da.json
+++ b/langs/da.json
@@ -1109,10 +1109,6 @@
     "dialog.generate_route_important_only_ignore": "Du valgte kun at gå mellem vigtige ting, men ingen kunne findes.\nVil du rute mellem alle elementer?",
     "menu.generate_route_distance": "Maksimal linjelængde",
     "menu.generate_route_start": "Ruten starter ved",
-    "menu.generate_route_start.sw": "Sydvest (↙)",
-    "menu.generate_route_start.ne": "Nordøst (↗)",
-    "menu.generate_route_start.n": "Nord (-)",
-    "menu.generate_route_start.se": "Sydøst (↘)",
     "menu.generate_route_start.custom": "Tilpasset",
     "menu.generate_route_start_lat": "Rute start lat.",
     "menu.generate_route_start_lng": "Ruten starter længe.",
@@ -1167,6 +1163,7 @@
     "map.user_pins.save": "Gem",
     "map.user_pins.remove": "Fjern",
     "map.user_pins.icon": "Ikon",
+    "map.user_pins.shape.default": "Standard",
     "map.user_pins.icon.pin": "Markering",
     "map.user_pins.icon.random": "Tilfældig",
     "map.user_pins.icon.shovel": "Spade",
@@ -1190,6 +1187,7 @@
     "map.user_pins.icon.nazar": "Madam Nazar",
     "map.user_pins.icon.treasure": "Skatten",
     "map.user_pins.icon.camp": "Lejr",
+    "map.color_picker.save": "Gem",
     "menu.clear_custom_routes": "Ryd tilpasset rute",
     "menu.clear_markers": "Nulstil markeringer nu",
     "menu.information_links": "Link / Information",
