--- a/langs/fi.json
+++ b/langs/fi.json
@@ -1166,10 +1166,6 @@
     "dialog.generate_route_important_only_ignore": "Valitsit reitin tärkeiden kohteiden välillä, mutta niitä ei löytynyt.\nHaluatko reitin kaikkien kohteiden välillä?",
     "menu.generate_route_distance": "Enimmäispituus",
     "menu.generate_route_start": "Reitti alkaa",
-    "menu.generate_route_start.sw": "Lounainen (↙)",
-    "menu.generate_route_start.ne": "Koillinen (↗)",
-    "menu.generate_route_start.n": "Pohjoinen (↑)",
-    "menu.generate_route_start.se": "Kaakossa (↘)",
     "menu.generate_route_start.custom": "Mukautettu",
     "menu.generate_route_start_lat": "Reitti alkaa.",
     "menu.generate_route_start_lng": "Reitti alkaa kauan.",
@@ -1224,6 +1220,7 @@
     "map.user_pins.save": "Tallenna",
     "map.user_pins.remove": "Poista",
     "map.user_pins.icon": "Kuvakkeet",
+    "map.user_pins.shape.default": "Oletusarvo",
     "map.user_pins.icon.pin": "Pini",
     "map.user_pins.icon.random": "Satunnainen",
     "map.user_pins.icon.shovel": "Lapio",
@@ -1247,6 +1244,8 @@
     "map.user_pins.icon.nazar": "Rouva Nazar.",
     "map.user_pins.icon.treasure": "Aarre",
     "map.user_pins.icon.camp": "Leiri",
+    "map.color_picker.save": "Tallenna",
+    "map.color_picker.reset": "Palautus",
     "menu.clear_custom_routes": "Poista mukautettu reitti",
     "menu.clear_markers": "Palauta merkit nyt",
     "menu.information_links": "Linkit/tiedot",
