--- a/langs/it.json
+++ b/langs/it.json
@@ -1294,10 +1294,6 @@
     "dialog.generate_route_important_only_ignore": "Hai scelto di ruotare solo tra oggetti importanti ma nessuno è stato trovato.\nVuoi ruotare tra tutti gli elementi?",
     "menu.generate_route_distance": "Lunghezza massima linea",
     "menu.generate_route_start": "Il percorso inizia a",
-    "menu.generate_route_start.sw": "Sud-ovest (↙)",
-    "menu.generate_route_start.ne": "Nord-est (↗)",
-    "menu.generate_route_start.n": "Nord (↑)",
-    "menu.generate_route_start.se": "Sud-est (↘)",
     "menu.generate_route_start.custom": "Personalizzato",
     "menu.generate_route_start_lat": "Inizio percorso lat.",
     "menu.generate_route_start_lng": "Inizio percorso long.",
@@ -1352,6 +1348,7 @@
     "map.user_pins.save": "Salva",
     "map.user_pins.remove": "Rimuovi",
     "map.user_pins.icon": "Icona",
+    "map.user_pins.shape.default": "Predefinita",
     "map.user_pins.icon.pin": "Segnalino",
     "map.user_pins.icon.random": "Casuale",
     "map.user_pins.icon.shovel": "Pala",
@@ -1376,6 +1373,8 @@
     "map.user_pins.icon.treasure": "Tesoro",
     "map.user_pins.icon.camp": "Accampamento",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Salva",
+    "map.color_picker.reset": "Reimposta",
     "menu.remove_all_pins": "Rimuovi tutti i pin",
     "help.remove_all_pins": "Rimuove tutti i pin creati dall'utente.",
     "menu.modal_remove_all_pins_title": "Rimuovere tutti i pin?",
