--- a/langs/ja.json
+++ b/langs/ja.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "重要な項目間を経路指定することを選択しましたが、何も見つかりませんでした。\nすべての項目を経路指定しますか ?",
     "menu.generate_route_distance": "行の最大長",
     "menu.generate_route_start": "ルート開始位置",
-    "menu.generate_route_start.sw": "南西 (↙)",
-    "menu.generate_route_start.ne": "北東部 (↗)",
-    "menu.generate_route_start.n": "北(↑)",
-    "menu.generate_route_start.se": "南東部 (↘)",
     "menu.generate_route_start.custom": "カスタム",
     "menu.generate_route_start_lat": "経路開始 lat。",
     "menu.generate_route_start_lng": "ルート開始時間。",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "セーブ",
     "map.user_pins.remove": "削除",
     "map.user_pins.icon": "アイコン",
+    "map.user_pins.shape.default": "デフォルト",
     "map.user_pins.icon.pin": "ピン ( 単位 )",
     "map.user_pins.icon.random": "ランダム",
     "map.user_pins.icon.shovel": "スペード",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "トレジャー",
     "map.user_pins.icon.camp": "キャンプ",
     "map.user_pins.icon.harrietum": "ハリエットハーブ",
+    "map.color_picker.save": "セーブ",
+    "map.color_picker.reset": "リセット",
     "menu.remove_all_pins": "ピンをすべて除去",
     "help.remove_all_pins": "ユーザー作成のピンをすべて削除します。",
     "menu.modal_remove_all_pins_title": "全てのピンを削除しますか？",
