--- a/langs/ko.json
+++ b/langs/ko.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "중요 항목 간의 경로를 선택했지만 찾을 수 없습니다.\n모든 항목 사이에 경로를 지정하시겠습니까?",
     "menu.generate_route_distance": "최대 경로 길이",
     "menu.generate_route_start": "경로 시작 위치",
-    "menu.generate_route_start.sw": "남서 (↙)",
-    "menu.generate_route_start.ne": "북동 (↗)",
-    "menu.generate_route_start.n": "북 (↑)",
-    "menu.generate_route_start.se": "남동 (↘)",
     "menu.generate_route_start.custom": "맞춤형",
     "menu.generate_route_start_lat": "경로 시작 (위도)",
     "menu.generate_route_start_lng": "경로 시작 (경도)",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "저장",
     "map.user_pins.remove": "제거",
     "map.user_pins.icon": "아이콘",
+    "map.user_pins.shape.default": "기본",
     "map.user_pins.icon.pin": "핀",
     "map.user_pins.icon.random": "랜덤",
     "map.user_pins.icon.shovel": "스페이드",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "보물",
     "map.user_pins.icon.camp": "캠프",
     "map.user_pins.icon.harrietum": "해리어텀 오피시날리스",
+    "map.color_picker.save": "저장",
+    "map.color_picker.reset": "초기화",
     "menu.remove_all_pins": "모든 핀 제거",
     "help.remove_all_pins": "사용자가 지정한 모든 핀을 제거합니다.",
     "menu.modal_remove_all_pins_title": "모든 핀을 제거합니까?",
