--- a/langs/nl.json
+++ b/langs/nl.json
@@ -776,10 +776,6 @@
     "menu.generate_route_important_only": "Alleen items gemarkeerd als belangrijk",
     "menu.generate_route_distance": "Maximale lijnlengte",
     "menu.generate_route_start": "Route begint bij",
-    "menu.generate_route_start.sw": "Zuidwest (↙)",
-    "menu.generate_route_start.ne": "Noordoost (↗)",
-    "menu.generate_route_start.n": "Noorden (↑)",
-    "menu.generate_route_start.se": "Zuidoost (↘)",
     "menu.generate_route_start.custom": "Aangepast",
     "menu.generate_route_start_lat": "Route begint op breedte.",
     "menu.generate_route_start_lng": "Route begint op lengte.",
@@ -833,6 +829,7 @@
     "map.user_pins.save": "Save",
     "map.user_pins.remove": "Verwijder",
     "map.user_pins.icon": "Icoon",
+    "map.user_pins.shape.default": "Standaard",
     "map.user_pins.icon.pin": "Pin",
     "map.user_pins.icon.random": "Willekeurig",
     "map.user_pins.icon.shovel": "Schep",
@@ -857,6 +854,8 @@
     "map.user_pins.icon.treasure": "Schat",
     "map.user_pins.icon.camp": "Kamp",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Save",
+    "map.color_picker.reset": "Opnieuw instellen",
     "menu.clear_custom_routes": "Aangepaste route wissen",
     "menu.clear_markers": "Markeringen nu opnieuw instellen",
     "menu.information_links": "Links en informatie",
