--- a/langs/pl.json
+++ b/langs/pl.json
@@ -1294,10 +1294,10 @@
     "dialog.generate_route_important_only_ignore": "Wybrałeś generowanie trasy tylko między przedmiotami oznaczonymi jako ważne, ale nie można było ich znaleźć. \nCzy chcesz wytyczyć nową trasę między wszystkimi przedmiotami?",
     "menu.generate_route_distance": "Maksymalna długość linii",
     "menu.generate_route_start": "Początek trasy",
-    "menu.generate_route_start.sw": "połud. zach. (↙)",
-    "menu.generate_route_start.ne": "półn. wsch. (↗)",
-    "menu.generate_route_start.n": "północ (↑)",
-    "menu.generate_route_start.se": "połud. wsch. (↘)",
+    "menu.generate_route_start.sw": "Południowy zachód",
+    "menu.generate_route_start.ne": "Północny wschód",
+    "menu.generate_route_start.n": "Północ",
+    "menu.generate_route_start.se": "Południowy wschód",
     "menu.generate_route_start.custom": "Niestandardowa",
     "menu.generate_route_start_lat": "Początek trasy (szer. geogr.)",
     "menu.generate_route_start_lng": "Początek trasy (dł. geogr.)",
@@ -1352,6 +1352,7 @@
     "map.user_pins.save": "Zapisz",
     "map.user_pins.remove": "Usuń",
     "map.user_pins.icon": "Ikona",
+    "map.user_pins.shape.default": "Domyślny",
     "map.user_pins.icon.pin": "Znacznik",
     "map.user_pins.icon.random": "Losowo",
     "map.user_pins.icon.shovel": "Łopata",
@@ -1376,6 +1377,8 @@
     "map.user_pins.icon.treasure": "Skarb",
     "map.user_pins.icon.camp": "Obóz",
     "map.user_pins.icon.harrietum": "Harrietum Officianalis",
+    "map.color_picker.save": "Zapisz",
+    "map.color_picker.reset": "Zresetuj",
     "menu.remove_all_pins": "Usuń wszystkie piny",
     "help.remove_all_pins": "Usuwa wszystkie piny użytkownika.",
     "menu.modal_remove_all_pins_title": "Usunąć wszystkie piny?",
