--- a/langs/pt_BR.json
+++ b/langs/pt_BR.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Você selecionou a rota com apenas itens importantes e não foi encontrado nenhum.\nVocê quer uma rota entre todos os items?",
     "menu.generate_route_distance": "Tamanho máximo da linha",
     "menu.generate_route_start": "Rota começa em",
-    "menu.generate_route_start.sw": "Sudoeste (↙)",
-    "menu.generate_route_start.ne": "Nordeste (↗)",
-    "menu.generate_route_start.n": "Norte (↑)",
-    "menu.generate_route_start.se": "Sudeste (↘)",
     "menu.generate_route_start.custom": "Personalizado",
     "menu.generate_route_start_lat": "Começo da rota lat.",
     "menu.generate_route_start_lng": "Começo da rota long.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Salvar",
     "map.user_pins.remove": "Remover",
     "map.user_pins.icon": "Ícone",
+    "map.user_pins.shape.default": "Padrão",
     "map.user_pins.icon.pin": "Pin",
     "map.user_pins.icon.random": "Aleatório",
     "map.user_pins.icon.shovel": "Pá",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Tesouros",
     "map.user_pins.icon.camp": "Acampamento",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Salvar",
+    "map.color_picker.reset": "Redefinir",
     "menu.remove_all_pins": "Remover todos os pins",
     "help.remove_all_pins": "Remove todos os pins criados pelo usuário.",
     "menu.modal_remove_all_pins_title": "Remover todos os pins?",
