--- a/langs/ru.json
+++ b/langs/ru.json
@@ -1294,10 +1294,6 @@
     "dialog.generate_route_important_only_ignore": "Вы выбрали маршрут только по важным предметам, но ни один из них не был найден.\nХотите проложить маршрут по всем предметам?",
     "menu.generate_route_distance": "Максимальная длина линии",
     "menu.generate_route_start": "Начало маршрута",
-    "menu.generate_route_start.sw": "на Юго-западе (↙)",
-    "menu.generate_route_start.ne": "на Северо-востоке (↗)",
-    "menu.generate_route_start.n": "на Севере (↑)",
-    "menu.generate_route_start.se": "на Юго-востоке (↘)",
     "menu.generate_route_start.custom": "по координатам",
     "menu.generate_route_start_lat": "lat:",
     "menu.generate_route_start_lng": "long:",
@@ -1352,6 +1348,7 @@
     "map.user_pins.save": "Сохранить",
     "map.user_pins.remove": "Удалить",
     "map.user_pins.icon": "Иконка метки",
+    "map.user_pins.shape.default": "Обычная",
     "map.user_pins.icon.pin": "Обычная метка",
     "map.user_pins.icon.random": "Случайный предмет",
     "map.user_pins.icon.shovel": "Лопата",
@@ -1376,6 +1373,8 @@
     "map.user_pins.icon.treasure": "Сокровище",
     "map.user_pins.icon.camp": "Лагерь",
     "map.user_pins.icon.harrietum": "Гариетум лекарственный",
+    "map.color_picker.save": "Сохранить",
+    "map.color_picker.reset": "Сброс отмеч.",
     "menu.remove_all_pins": "Удалить все метки",
     "help.remove_all_pins": "Удаляет все созданные пользователем метки.",
     "menu.modal_remove_all_pins_title": "Удалить все метки?",
