--- a/langs/sv.json
+++ b/langs/sv.json
@@ -404,8 +404,6 @@
     "menu.marker_cluster": "Markörkluster",
     "menu.generate_route_distance": "Maximal linjelängd",
     "menu.generate_route_start": "Rutten startar vid",
-    "menu.generate_route_start.ne": "Nordost (↗)",
-    "menu.generate_route_start.se": "Sydost (↘)",
     "menu.generate_route_start.custom": "Anpassad",
     "menu.generate_route_start_lat": "Ruttstart lat.",
     "menu.generate_route_start_lng": "Ruttstart long.",
@@ -450,6 +448,7 @@
     "map.user_pins.save": "Spara",
     "map.user_pins.remove": "Ta bort",
     "map.user_pins.icon": "Ikon",
+    "map.user_pins.shape.default": "Standard",
     "map.user_pins.icon.pin": "Markering",
     "map.user_pins.icon.random": "Slumpmässig",
     "map.user_pins.icon.shovel": "Spade",
@@ -473,6 +472,8 @@
     "map.user_pins.icon.nazar": "Madam Nazar",
     "map.user_pins.icon.treasure": "Skatt",
     "map.user_pins.icon.camp": "Läger",
+    "map.color_picker.save": "Spara",
+    "map.color_picker.reset": "Återställ",
     "menu.clear_custom_routes": "Rensa anpassad rutt",
     "menu.clear_markers": "Återställ markörer nu",
     "menu.information_links": "Länkar/Information",
