--- a/langs/th.json
+++ b/langs/th.json
@@ -571,10 +571,6 @@
     "menu.route_generator": "สร้างเส้นทาง",
     "menu.generate_route": "สร้าง",
     "menu.generate_route_clear": "เคลียร์",
-    "menu.generate_route_start.sw": "ทิศตะวันตกเฉียงใต้ (↙)",
-    "menu.generate_route_start.ne": "ทิศตะวันออกเฉียงเหนือ (↗)",
-    "menu.generate_route_start.n": "ทิศเหนือ (↑)",
-    "menu.generate_route_start.se": "ทิศตะวันออกเฉียงใต้ (↘)",
     "menu.generate_route_start.custom": "ปรับแต่งเอง",
     "menu.generate_route_use_pathfinder": "ใช้ตัวค้นหาเส้นทาง (ช้า)",
     "menu.generate_route_fasttravel_weight": "อ้างอิงจากจุดวาร์ป",
@@ -603,6 +599,7 @@
     "menu.user_pins_import": "นําเข้า",
     "menu.user_pins_export": "ส่งออก",
     "map.user_pins.save": "บันทึก",
+    "map.user_pins.shape.default": "ค่าเริ่มต้น",
     "map.user_pins.icon.flower": "American Flower",
     "map.user_pins.icon.coin": "Coin",
     "map.user_pins.icon.heirlooms": "Family Heirloom",
@@ -614,6 +611,8 @@
     "map.user_pins.icon.ring": "แหวน",
     "map.user_pins.icon.nazar": "Madam Nazar",
     "map.user_pins.icon.treasure": "กล่องสมบัติ",
+    "map.color_picker.save": "บันทึก",
+    "map.color_picker.reset": "ตั้งค่าใหม่",
     "menu.clear_custom_routes": "เคลียร์เส้นทางกำหนดเอง",
     "menu.clear_markers": "วางจุดใหม่เดี๋ยวนี้",
     "menu.modal_clear_markers_body": "นำเครื่องหมายทั้งหมดออกจากแผนที่ การกระทำนี้ไม่สามารถนำกลับมาได้",
