--- a/langs/zh_Hans.json
+++ b/langs/zh_Hans.json
@@ -1249,7 +1249,12 @@
     "menu.query_suggestions_hotkey": "在建议中搜索，按 {↑} {↓} {Enter} 以进行常规搜索。",
     "menu.auto_enable_sold_items": "自动启用已全部售出的物品",
     "menu.back_to_top": "滚动至顶部（可拖拽）",
+    "map.tips": "小贴士",
+    "map.draggable": "可拖拽",
+    "map.latitude": "纬度",
+    "map.longitude": "经度",
     "map.remove_add": "从地图中移除/添加",
+    "map.add": "添加到地图",
     "map.remove": "从地图中移除",
     "map.copy_link": "复制链接",
     "map.link_copied": "已复制！",
@@ -1272,6 +1277,7 @@
     "routes.set_as_route_start": "设置为路线起点",
     "routes.generate_route_now": "设置起点并生成路线",
     "menu.random_spots": "随机物品",
+    "menu.span_game_released": "自发布以来：{years} 年 {days} 天",
     "menu.collectables_counter": "已收集 {count}/{max}",
     "menu.collection_counter": "{count} / {max}",
     "menu.collection_counter_percentage": "{count}%",
@@ -1296,11 +1302,12 @@
     "dialog.generate_route_important_only_ignore": "您选择只经过重要物品之间的路线，可是没有找到。\n您要在所有物品之间进行连线吗？",
     "menu.generate_route_distance": "最大路线长度",
     "menu.generate_route_start": "路线起始于",
-    "menu.generate_route_start.sw": "左下角 (↙)",
-    "menu.generate_route_start.ne": "右上角 (↗)",
-    "menu.generate_route_start.n": "上方 (↑)",
-    "menu.generate_route_start.se": "右下角 (↘)",
+    "menu.generate_route_start.sw": "西南角",
+    "menu.generate_route_start.ne": "东北角",
+    "menu.generate_route_start.n": "正北",
+    "menu.generate_route_start.se": "东南角",
     "menu.generate_route_start.custom": "自定义起始点",
+    "menu.generate_route_start.map_click": "点击地图",
     "menu.generate_route_start_lat": "自定义起始点纬度",
     "menu.generate_route_start_lng": "自定义起始点经度",
     "menu.generate_route_use_pathfinder": "使用高级寻路模式",
@@ -1354,6 +1361,9 @@
     "map.user_pins.save": "保存",
     "map.user_pins.remove": "移除",
     "map.user_pins.icon": "图标",
+    "map.user_pins.shape": "形状",
+    "map.user_pins.shape.default": "默认",
+    "map.user_pins.shape.pushpin": "图钉",
     "map.user_pins.icon.pin": "图钉",
     "map.user_pins.icon.random": "随机",
     "map.user_pins.icon.shovel": "铁锹",
@@ -1378,6 +1388,8 @@
     "map.user_pins.icon.treasure": "藏宝图",
     "map.user_pins.icon.camp": "营地",
     "map.user_pins.icon.harrietum": "哈莉特花",
+    "map.color_picker.save": "保存",
+    "map.color_picker.reset": "重置",
     "menu.remove_all_pins": "移除所有图钉",
     "help.remove_all_pins": "移除所有用户创建的图钉。",
     "menu.modal_remove_all_pins_title": "移除所有图钉？",
@@ -1517,6 +1529,7 @@
     "help.generate_route_start_custom": "允许您设置路线起点的自定义坐标。",
     "help.generate_route_use_pathfinder": "切换是否使用精准度更高的路线生成器。若对性能有较大影响请禁用此选项。",
     "help.hide_all": "隐藏地图中的所有标记。",
+    "help.import_rdo_inventory": "打开工具以导入游戏中的背包物品。",
     "help.import_route": "将自定义路线导入地图。",
     "help.inventory_stack": "允许您设置任意物品的最大背包数量。 默认值为 10，与游戏中保持一致。",
     "help.item_category": "切换此系列在地图上是否可见。",
@@ -1852,7 +1865,7 @@
     "help.enable_legendary_backgrounds": "允许您在地图上的黄色圆圈中启用或禁用动物图标背景。",
     "map.sightseeing.hidden": "隐藏点",
     "map.remove.animal_category": "将此物种所有动物移除 72 小时",
-    "map.legendary_animal_cooldown_end_time": "冷却时间：{timer}",
+    "map.legendary_animal_cooldown_end_time": "冷却截至：{timer}",
     "map.reset_animal_timer": "重置此物种所有动物的冷却时间",
     "help.legendary_marker_type": "允许您更改传说动物出现位置的图标。",
     "menu.legendary_animal_marker_type": "传说动物标记样式",
@@ -1875,6 +1888,16 @@
     "menu.translate_progress": "此语言的翻译进度为 {progress}%。",
     "help.map_boundaries": "允许您启用或禁用地图边界。启用时，地图总是显示在屏幕范围之内。",
     "menu.map_boundaries": "启用地图边界",
+    "menu.map_zoom_snap": "缩放捕捉",
+    "menu.map_zoom_delta": "缩放增量",
+    "menu.map_wheel_debounce_time": "滚轮去抖动时间",
+    "menu.map_wheel_px_per_zoom_level": "每缩放级别的滚轮像素数",
+    "menu.map_reset_zoom_wheel_settings": "重置缩放和滚轮设置",
+    "help.map_zoom_snap": "强制地图的缩放级别始终为此数值的倍数，尤其是在双指缩放后。默认情况下，缩放级别会捕捉到最接近的整数；较小的值（如 0.5 或 0.1）允许更精准的缩放控制。值为 0 表示在双指缩放后不会进行捕捉。",
+    "help.map_zoom_delta": "控制在放大、缩小或按下缩放控制器上的 + 或 - 后，地图的缩放级别会发生多大变化。小于 1 的值（如 0.5）允许更精准的缩放控制。",
+    "help.map_wheel_debounce_time": "限制滚轮触发的频率（以毫秒为单位）。",
+    "help.map_wheel_px_per_zoom_level": "滚动多少像素代表缩放一级。较小的值将加快滚轮缩放速度，反之亦然。",
+    "help.map_reset_zoom_wheel_settings": "重置缩放和滚轮设置为默认值。",
     "menu.lang_en": "English (英语)",
     "menu.lang_af": "Afrikaans (南非荷兰语)",
     "menu.lang_ar": "العربية (阿拉伯语)",
@@ -1890,6 +1913,7 @@
     "menu.lang_fr": "Français (法语)",
     "menu.lang_he": "עברית (希伯来语)",
     "menu.lang_hu": "Magyar (匈牙利语)",
+    "menu.lang_id": "Bahasa Indonesia (印度尼西亚语)",
     "menu.lang_it": "Italiano (意大利语)",
     "menu.lang_ja": "日本語 (日语)",
     "menu.lang_ko": "한국어 (韩语)",
