--- a/langs/cs.json
+++ b/langs/cs.json
@@ -1210,10 +1210,13 @@
     "menu.utils": "Pomůcky",
     "menu.fast_travel": "Rychlá cesta",
     "menu.search_placeholder": "Hledat položky. odloučená od;",
+    "menu.query_suggestions_hotkey": "Hledání v návrzích, stiskněte tlačítko {↑} {↓} {Enter} pro všeobecné vyhledávání.",
     "menu.auto_enable_sold_items": "Automaticky povolit prodané položky",
+    "menu.back_to_top": "Posunout zpět nahoru (Přetahovatelné)",
     "map.remove_add": "Odebrat/Přidat z mapy",
     "map.remove": "Odebrat z mapy",
     "map.copy_link": "Kopírovat odkaz značkovače",
+    "map.link_copied": "Zkopírováno!",
     "map.video": "Video konektor",
     "map.flower_type.night_only": "Tato květina se pločí jen v noci (od 22:00 do 5:00 hodin).",
     "map.flower_type.bush": "Ta květina roste na křoví.",
@@ -1257,10 +1260,6 @@
     "dialog.generate_route_important_only_ignore": "Zvolili jste směrování mezi důležitými položkami, ale žádná nebyla nalezena.\nChcete provést směrování mezi všemi položkami?",
     "menu.generate_route_distance": "Maximální délka řádku",
     "menu.generate_route_start": "Trasa začíná v",
-    "menu.generate_route_start.sw": "Jihozápad (↙)",
-    "menu.generate_route_start.ne": "Severovýchod (↗)",
-    "menu.generate_route_start.n": "Sever (↑)",
-    "menu.generate_route_start.se": "Jihovýchod (↘)",
     "menu.generate_route_start.custom": "Vlastní",
     "menu.generate_route_start_lat": "Trasa začíná v lat.",
     "menu.generate_route_start_lng": "Začátek trasy.",
@@ -1315,6 +1314,7 @@
     "map.user_pins.save": "Uložit",
     "map.user_pins.remove": "Odebrat",
     "map.user_pins.icon": "Ikona",
+    "map.user_pins.shape.default": "Výchozí",
     "map.user_pins.icon.pin": "Ukotvit",
     "map.user_pins.icon.random": "Náhodné",
     "map.user_pins.icon.shovel": "Rýh",
@@ -1339,6 +1339,8 @@
     "map.user_pins.icon.treasure": "Poklad",
     "map.user_pins.icon.camp": "Tábor",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Uložit",
+    "map.color_picker.reset": "Vynulovat",
     "menu.remove_all_pins": "Odstranit všechny piny",
     "help.remove_all_pins": "Odstraní všechny uživatelem vytvořené piny.",
     "menu.modal_remove_all_pins_title": "Odstranit všechny piny?",
@@ -1375,6 +1377,7 @@
     "menu.enable_dclick_zoom": "Poklepáním se přiblíží",
     "menu.show_help": "Zobrazit nápovědu při události hover",
     "map.mark_important": "Označit jako důležité",
+    "map.unmark_important": "Odznačit jako důležité",
     "menu.marker_opacity": "Neprůhlednost značky",
     "menu.marker_opacity.20": "20%",
     "menu.marker_opacity.40": "40%",
@@ -1396,7 +1399,12 @@
     "menu.marker_size.150": "150%",
     "menu.marker_size.175": "175%",
     "menu.marker_size.200": "200%",
+    "help.invisible-removed-markers": "Úplně skryje odstraněné značky místo jejich částečného zprůhlednění.",
+    "menu.invisible-removed-markers": "Úplně skrýt odstraněné značky",
     "menu.toggle_debug": "Přepnout funkce ladění",
+    "map.random_spot_metal_detector_chest.desc": "Na tomto místě vykopete truhlu obsahující náhodný předmět, podrobnější informace najdete na {int.random_spot.link}této stránce Wiki{int.end.link}.",
+    "map.random_spot_metal_detector_shallow.desc": "Na tomto místě vykopete truhlu obsahující náhodný předmět, podrobnější informace najdete na {int.random_spot.link}této stránce Wiki{int.end.link}.",
+    "map.random_spot_shovel.desc": "Toto místo vám dává náhodný předmět, podrobnější informace najdete na {int.random_spot.link}této stránce Wiki{int.end.link}.",
     "map.attribution_prefix": "Přispěvatelé mapy sběračů",
     "menu.clear_important_items": "Vymazat důležité značky",
     "menu.modal_clear_important_items_body": "Tím se vymaže zvýraznění ze všech značek označených jako důležité. Tuto akci nelze vrátit zpět.",
@@ -1417,6 +1425,7 @@
     "menu.show_import_export": "Zobrazit nastavení importu/exportu",
     "menu.show_debug": "Zobrazit nastavení ladění",
     "menu.enable_cycle_input": "Povolit ruční vstup do cyklu",
+    "menu.override_browser_search": "Přepsat vyhledávání prohlížeče",
     "menu.show_all_cycles_markers": "Zobrazit všechny značky",
     "menu.enable_context_menu": "Povolit kontextovou nabídku",
     "menu.marker_color.header": "Barva vlastních značek",
@@ -1440,6 +1449,7 @@
     "menu.soft_flowers_inventory_stack": "Velikost měkkého zásobníku květin",
     "menu.reload_map": "Znovu načíst mapu",
     "menu.disable_collected_items": "Zakázání shromažďování",
+    "menu.disable_all_collected_items": "Deaktivovat sesbírané předměty",
     "menu.collection_collect_all": "Shromáždit vše",
     "menu.enable_additional_inventory_options": "Povolit rozšířené volby inventáře",
     "help.default": "Ponechte ukazatel myši nad nebo dlouhým stisknutím (mobilní) jakékoli nastavení, abyste získali informace o něm.",
@@ -1502,6 +1512,9 @@
     "help.item": "Přepíná, zda má být tato položka viditelná na mapě.",
     "help.item_night_only": "Přepíná, zda má být tato položka viditelná na mapě. Všimněte si, že tato položka se objevuje pouze mezi 22:00 a 5:00 ráno. Klepněte na časovač v levém horním rohu mapy a zobrazte si čas ve hře.",
     "help.item_weekly": "Přepíná, zda má být tato položka viditelná na mapě. Tato položka je součástí týdenní kolekce {collection}.",
+    "help.item_unavailable": "Tento předmět není dostupný kvůli chybě ve hře nebo tím, že ještě nebyl objeven.",
+    "help.item_random": "Tento předmět je náhodný a nemá pevné místo výskytu.",
+    "help.jewelry_random_timestamp": "Tento předmět je dnes náhodný, další pevné místo výskytu bude {day}",
     "help.clear_important_items": "Vyčistí zvýraznění ze všech značek označených jako důležité.",
     "help.item_category_unavailable_items": "Přepíná, zda by tato sada měla být viditelná na mapě. Tato sada obsahuje jednu nebo více položek, které jsou náhodné, nebo jsou nedostupné kvůli chybě hry.",
     "help.item_category_bugged_items": "Přepíná, zda by tato sada měla být viditelná na mapě. Tato sada obsahuje jednu nebo více položek, které jsou náhodné, nebo jsou nedostupné kvůli chybě hry.",
