--- a/langs/de.json
+++ b/langs/de.json
@@ -1247,9 +1247,12 @@
     "menu.fast_travel": "Schnellreise",
     "menu.search_placeholder": "Gegenstände suchen. Getrennt durch ;",
     "menu.auto_enable_sold_items": "Verkaufte Gegenstände automatisch aktivieren",
+    "map.tips": "Tipps",
     "map.remove_add": "Von Karte entfernen/hinzufügen",
+    "map.add": "Füge der Karte hinzu",
     "map.remove": "Von Karte entfernen",
     "map.copy_link": "Markierungs-Link kopieren",
+    "map.link_copied": "Kopiert!",
     "map.video": "Video",
     "map.flower_type.night_only": "Diese Blumen kommen nur Nachts vor (von 10 Uhr abends bis 5 Uhr früh).",
     "map.flower_type.bush": "Diese Blumen blühen auf Büschen.",
@@ -1269,6 +1272,7 @@
     "routes.set_as_route_start": "Als Routenstart festlegen",
     "routes.generate_route_now": "Start festlegen und Route generieren",
     "menu.random_spots": "Zufällige Stellen",
+    "menu.span_game_released": "Veröffentlicht: {years} Jahren und {days} Tagen",
     "menu.collectables_counter": "{count} von {max} gesammelt",
     "menu.collection_counter": "{count} von {max}",
     "menu.collection_counter_percentage": "{count}%",
@@ -1293,11 +1297,12 @@
     "dialog.generate_route_important_only_ignore": "Sie haben sich für die Route zwischen wichtigen Gegenständen entschieden, aber es konnte keine gefunden werden.\nSoll die Route zwischen allen Gegenständen berechnet werden?",
     "menu.generate_route_distance": "Maximale Einzelstrecke",
     "menu.generate_route_start": "Startpunkt",
-    "menu.generate_route_start.sw": "Südwest (↙)",
-    "menu.generate_route_start.ne": "Nordost (↗)",
-    "menu.generate_route_start.n": "Norden (↑)",
-    "menu.generate_route_start.se": "Südost (↘)",
+    "menu.generate_route_start.sw": "Südwest",
+    "menu.generate_route_start.ne": "Nordost",
+    "menu.generate_route_start.n": "Norden",
+    "menu.generate_route_start.se": "Südost",
     "menu.generate_route_start.custom": "Eigener Punkt",
+    "menu.generate_route_start.map_click": "Die Karte anklicken",
     "menu.generate_route_start_lat": "Startpunkt lat.",
     "menu.generate_route_start_lng": "Startpunkt long.",
     "menu.generate_route_use_pathfinder": "Nutze Wegfindung für die Route (Berechnung sehr langsam)",
@@ -1351,6 +1356,7 @@
     "map.user_pins.save": "Speichern",
     "map.user_pins.remove": "Entfernen",
     "map.user_pins.icon": "Symbol",
+    "map.user_pins.shape.default": "Standard",
     "map.user_pins.icon.pin": "Anheften",
     "map.user_pins.icon.random": "Zufällige Stelle",
     "map.user_pins.icon.shovel": "Schaufel",
@@ -1375,6 +1381,8 @@
     "map.user_pins.icon.treasure": "Schatz",
     "map.user_pins.icon.camp": "Lager",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Speichern",
+    "map.color_picker.reset": "Zurücksetzen",
     "menu.remove_all_pins": "Entferne alle Markierungen",
     "help.remove_all_pins": "Entfernt alle vom Benutzer erstellten Markierungen.",
     "menu.modal_remove_all_pins_title": "Alle Markierungen entfernen?",
