--- a/langs/es_MX.json
+++ b/langs/es_MX.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Optaste por hacer una ruta solo con ítems importantes pero no se ha podido encontrar ninguno.\nQuieres hacer una ruta con todos los ítems?",
     "menu.generate_route_distance": "Longitud máxima de línea",
     "menu.generate_route_start": "Ruta empieza en",
-    "menu.generate_route_start.sw": "Suroeste (↙)",
-    "menu.generate_route_start.ne": "Noreste (↗)",
-    "menu.generate_route_start.n": "Norte (↑)",
-    "menu.generate_route_start.se": "Sureste (↘)",
     "menu.generate_route_start.custom": "Personalizado",
     "menu.generate_route_start_lat": "Ruta empieza lat",
     "menu.generate_route_start_lng": "Ruta empieza long.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Guardar",
     "map.user_pins.remove": "Remover",
     "map.user_pins.icon": "Ícono",
+    "map.user_pins.shape.default": "Predeterminado",
     "map.user_pins.icon.pin": "Marcador",
     "map.user_pins.icon.random": "Aleatorio",
     "map.user_pins.icon.shovel": "Pala",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Tesoro",
     "map.user_pins.icon.camp": "Campamento",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Guardar",
+    "map.color_picker.reset": "Reiniciar",
     "menu.remove_all_pins": "Remover todos los indicadores",
     "help.remove_all_pins": "Eliminar todos los marcadores del usuario.",
     "menu.modal_remove_all_pins_title": "¿Remover todos los indicadores?",
