--- a/langs/fr.json
+++ b/langs/fr.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Vous avez choisi d'itinéraire entre les éléments importants seulement mais aucun élément n'a pu être trouvé.\nVoulez-vous router entre tous les éléments ?",
     "menu.generate_route_distance": "Taille maximale du titre",
     "menu.generate_route_start": "La route commence au",
-    "menu.generate_route_start.sw": "Sud-Ouest (↙)",
-    "menu.generate_route_start.ne": "Nord-est (↗)",
-    "menu.generate_route_start.n": "Nord (<unk> )",
-    "menu.generate_route_start.se": "Sud-est (↘)",
     "menu.generate_route_start.custom": "Personnalisé",
     "menu.generate_route_start_lat": "La route commence à.",
     "menu.generate_route_start_lng": "La route commence à.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Exporter ",
     "map.user_pins.remove": "Supprimer",
     "map.user_pins.icon": "Icône",
+    "map.user_pins.shape.default": "Normale",
     "map.user_pins.icon.pin": "Épingle",
     "map.user_pins.icon.random": "Aléatoire",
     "map.user_pins.icon.shovel": "Pelle",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Trésor",
     "map.user_pins.icon.camp": "Camp",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Exporter ",
+    "map.color_picker.reset": "Réinitialiser",
     "menu.remove_all_pins": "Supprimer toutes les épingles",
     "help.remove_all_pins": "Supprime toutes les épingles créées par l'utilisateur.",
     "menu.modal_remove_all_pins_title": "Supprimer toutes les épingles ?",
