--- a/langs/he.json
+++ b/langs/he.json
@@ -864,10 +864,6 @@
     "dialog.generate_route_important_only_ignore": "בחרתם לנתב בין חפצים חשובים בלבד אך לא ניתן למצוא אותם.\nהאם תרצו לנתב בין כל הפריטים?",
     "menu.generate_route_distance": "אורך מירבי",
     "menu.generate_route_start": "הנתיב מתחיל ב -",
-    "menu.generate_route_start.sw": "דרום מערב (↙)",
-    "menu.generate_route_start.ne": "צפון מזרח (↗)",
-    "menu.generate_route_start.n": "צפון (↑)",
-    "menu.generate_route_start.se": "דרום מזרח (↘)",
     "menu.generate_route_start.custom": "מותאם אישית",
     "menu.generate_route_fasttravel_weight": "העדפת מעבר מהיר",
     "menu.generate_route_railroad_weight": "העדפת מסילות רכבת",
@@ -922,6 +918,7 @@
     "map.user_pins.icon.nazar": "מאדאם נאזאר",
     "map.user_pins.icon.treasure": "אוצר",
     "map.user_pins.icon.camp": "מחנה",
+    "map.color_picker.reset": "איפוס",
     "menu.clear_custom_routes": "נקה נתיב מותאם אישית",
     "menu.information_links": "קישורים/מידע",
     "menu.modal_clear_inventory_title": "לנקות תיק?",
