--- a/langs/hu.json
+++ b/langs/hu.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Úgy döntött, hogy csak a fontos tételek közötti útvonalat választja, de egyet sem találtunk.\nSzeretne az összes tétellel utat tervezni?",
     "menu.generate_route_distance": "Maximum vonal hosszúság",
     "menu.generate_route_start": "Útvonal indul",
-    "menu.generate_route_start.sw": "Dél-Nyugat",
-    "menu.generate_route_start.ne": "Észak-Kelet",
-    "menu.generate_route_start.n": "Észak",
-    "menu.generate_route_start.se": "Dél-Kelet",
     "menu.generate_route_start.custom": "Egyéni",
     "menu.generate_route_start_lat": "Útvonal indul.",
     "menu.generate_route_start_lng": "Útvonal hosszú kezdése.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Mentés",
     "map.user_pins.remove": "Eltávolítás",
     "map.user_pins.icon": "Icon",
+    "map.user_pins.shape.default": "Alapértelmezett",
     "map.user_pins.icon.pin": "Kijelölés",
     "map.user_pins.icon.random": "Véletlenszerű",
     "map.user_pins.icon.shovel": "ásó",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Kincs",
     "map.user_pins.icon.camp": "Tábor",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Mentés",
+    "map.color_picker.reset": "Visszaállítás",
     "menu.remove_all_pins": "Összes jelölés eltávolítása",
     "help.remove_all_pins": "Összes felhasználó által elhelyezett jelölés eltávolítása.",
     "menu.modal_remove_all_pins_title": "Minden jelölés eltávolítása?",
