--- a/langs/ro.json
+++ b/langs/ro.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Aţi optat să creați o rută numai între articolele importante dar nici unul nu a putut fi găsit.\nDoriţi să creați o rută între toate articolele?",
     "menu.generate_route_distance": "Lungime linie maximă",
     "menu.generate_route_start": "Ruta începe la",
-    "menu.generate_route_start.sw": "Sud-vest (↙)",
-    "menu.generate_route_start.ne": "Nord-est (↗)",
-    "menu.generate_route_start.n": "Nord (↑)",
-    "menu.generate_route_start.se": "Sud-est (↘)",
     "menu.generate_route_start.custom": "Personalizat",
     "menu.generate_route_start_lat": "Latitudinea la început de rută.",
     "menu.generate_route_start_lng": "Longitudinea la început de rută.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Salvare",
     "map.user_pins.remove": "Eliminare",
     "map.user_pins.icon": "Iconiță",
+    "map.user_pins.shape.default": "Implicit",
     "map.user_pins.icon.pin": "Pin",
     "map.user_pins.icon.random": "Aleatoriu",
     "map.user_pins.icon.shovel": "Cazma",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Comoară",
     "map.user_pins.icon.camp": "Tabără",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Salvare",
+    "map.color_picker.reset": "Resetare",
     "menu.remove_all_pins": "Elimină toate pin-urile",
     "help.remove_all_pins": "Elimină toate pin-urile create de utilizator.",
     "menu.modal_remove_all_pins_title": "Elimină toate pin-urile?",
