--- a/langs/tr.json
+++ b/langs/tr.json
@@ -1250,10 +1250,6 @@
     "dialog.generate_route_important_only_ignore": "Yalnızca önemli eşyalar arasında rota oluşturmaya karar verdiniz, ancak hiçbiri bulunamadı. Tüm eşyalar arasında rota oluşturmak istiyor musunuz?",
     "menu.generate_route_distance": "Çizgi uzunluğu üst sınırı",
     "menu.generate_route_start": "Rota başlangıcı",
-    "menu.generate_route_start.sw": "Güneybatı (↙)",
-    "menu.generate_route_start.ne": "Kuzeydoğu(↗)",
-    "menu.generate_route_start.n": "Kuzey (↑)",
-    "menu.generate_route_start.se": "Güneydoğu (↘)",
     "menu.generate_route_start.custom": "Özel",
     "menu.generate_route_start_lat": "Rota başlangıcı enlemi",
     "menu.generate_route_start_lng": "Rota başlangıcı boylamı",
@@ -1308,6 +1304,7 @@
     "map.user_pins.save": "Kaydet",
     "map.user_pins.remove": "Kaldır",
     "map.user_pins.icon": "İkon",
+    "map.user_pins.shape.default": "Varsayılan değer",
     "map.user_pins.icon.pin": "Pim",
     "map.user_pins.icon.random": "Rastgele",
     "map.user_pins.icon.shovel": "Kürek",
@@ -1332,6 +1329,8 @@
     "map.user_pins.icon.treasure": "Hazine",
     "map.user_pins.icon.camp": "Kamp",
     "map.user_pins.icon.harrietum": "Harrietum Officinalis",
+    "map.color_picker.save": "Kaydet",
+    "map.color_picker.reset": "Sıfırla",
     "menu.remove_all_pins": "Tüm pimleri kaldır",
     "help.remove_all_pins": "Kullanıcı tarafından oluşturulan tüm pimleri kaldırır.",
     "menu.modal_remove_all_pins_title": "Tüm pimler kaldırılsın mı?",
