--- a/langs/uk.json
+++ b/langs/uk.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "Ви обрали маршрут лише між важливими предметами, але жодного з них не знайдено. Хочете прокласти маршрут між усіма предметами?",
     "menu.generate_route_distance": "Максимальна довжина лінії",
     "menu.generate_route_start": "Початок маршруту",
-    "menu.generate_route_start.sw": "На Південному заході (↙)",
-    "menu.generate_route_start.ne": "На Північному сході (↗)",
-    "menu.generate_route_start.n": "На Півночі (↑)",
-    "menu.generate_route_start.se": "На Південному сході (↘)",
     "menu.generate_route_start.custom": "За координатами",
     "menu.generate_route_start_lat": "Початок маршруту lat.",
     "menu.generate_route_start_lng": "Початок маршруту (довгий).",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "Зберегти",
     "map.user_pins.remove": "Видалити",
     "map.user_pins.icon": "Іконка відмітки",
+    "map.user_pins.shape.default": "Типова",
     "map.user_pins.icon.pin": "Звичайна відмітка",
     "map.user_pins.icon.random": "Випадково",
     "map.user_pins.icon.shovel": "Лопата",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "Скарб",
     "map.user_pins.icon.camp": "Табір",
     "map.user_pins.icon.harrietum": "Гаррієтум лікарський",
+    "map.color_picker.save": "Зберегти",
+    "map.color_picker.reset": "Скинути",
     "menu.remove_all_pins": "Видалити всі мітки",
     "help.remove_all_pins": "Видаляє всі мітки створені користувачем.",
     "menu.modal_remove_all_pins_title": "Видалити всі мітки?",
