--- a/langs/zh_Hant.json
+++ b/langs/zh_Hant.json
@@ -1293,10 +1293,6 @@
     "dialog.generate_route_important_only_ignore": "你選擇了導航重要物品的路線, 但沒有物品。\n你要選擇導航所有物品的路線嗎？",
     "menu.generate_route_distance": "最大路線長度",
     "menu.generate_route_start": "路線開始於",
-    "menu.generate_route_start.sw": "左下角 (↙)",
-    "menu.generate_route_start.ne": "右上角 (↗)",
-    "menu.generate_route_start.n": "上方 (↑)",
-    "menu.generate_route_start.se": "右下角 (↘)",
     "menu.generate_route_start.custom": "自定義起始點",
     "menu.generate_route_start_lat": "自定義起始點 lat.",
     "menu.generate_route_start_lng": "自定義起始點 long.",
@@ -1351,6 +1347,7 @@
     "map.user_pins.save": "保存",
     "map.user_pins.remove": "刪除",
     "map.user_pins.icon": "圖標",
+    "map.user_pins.shape.default": "預設",
     "map.user_pins.icon.pin": "初始標點",
     "map.user_pins.icon.random": "隨機",
     "map.user_pins.icon.shovel": "鏟子",
@@ -1375,6 +1372,8 @@
     "map.user_pins.icon.treasure": "寶藏",
     "map.user_pins.icon.camp": "營地",
     "map.user_pins.icon.harrietum": "哈莉特花",
+    "map.color_picker.save": "保存",
+    "map.color_picker.reset": "重置",
     "menu.remove_all_pins": "移除所有標記",
     "help.remove_all_pins": "移除所有使用者建立的標記。",
     "menu.modal_remove_all_pins_title": "移除所有標記?",
