--- a/langs/cs.json
+++ b/langs/cs.json
@@ -534,6 +534,7 @@
     "coin_random_8_4.desc": "Mezi stromem a kameny v blízkosti železnice.",
     "coin_random_0_5.desc": "Vedle rozbitého vozu vedle plotu na východní straně pozemku.",
     "coin_random_14_6.desc": "Uvnitř tunelu vedle železnice.",
+    "provision_coin_1789_pny.name": "Mince 1789",
     "coin_random_10_1.desc": "Vedle stromu v polovině poloostrova.",
     "coin_random_3_2.desc": "Na pravé straně mrtvého stromu.",
     "coin_random_6_3.desc": "Vedle rozbitého vozu.",
@@ -653,7 +654,7 @@
     "arrowhead_random_5_5.desc": "Vedle stromů na straně silnice.",
     "arrowhead_random_2_6.desc": "Na zadní straně chatrče rozbitými kolečky.",
     "provision_arrowhead_raw.name": "Arrowhead typu Raw",
-    "arrowhead_random_7_1.desc": "Pod stromem s chovatelky snů.",
+    "arrowhead_random_7_1.desc": "Pod stromem se zavěšenými lahvemi.",
     "arrowhead_random_11_2.desc": "Za chaty.",
     "arrowhead_random_5_3.desc": "Před stromem na pobřeží malého proudu.",
     "arrowhead_random_11_4.desc": "Na základně stromu, vedle skály.",
