--- a/langs/de.json
+++ b/langs/de.json
@@ -654,7 +654,7 @@
     "arrowhead_random_5_5.desc": "Neben den Bäumen am Straßenrand.",
     "arrowhead_random_2_6.desc": "Rückseite der Hütte bei ein paar kaputte Wagenräder.",
     "provision_arrowhead_raw.name": "Rohe Pfeilspitze",
-    "arrowhead_random_7_1.desc": "Unter dem Baum mit den Traumfängern.",
+    "arrowhead_random_7_1.desc": "Unter dem Baum mit hängenden Flaschen.",
     "arrowhead_random_11_2.desc": "Hinter den Hütten.",
     "arrowhead_random_5_3.desc": "Vor einem Baum an der Küste eines kleinen Baches.",
     "arrowhead_random_11_4.desc": "An der Basis des Baumes, neben dem Felsen.",
@@ -1246,6 +1246,7 @@
     "menu.utils": "Werkzeuge",
     "menu.fast_travel": "Schnellreise",
     "menu.search_placeholder": "Gegenstände suchen. Getrennt durch ;",
+    "menu.query_suggestions_hotkey": "Suche in Vorschlägen, drücke {↑} {↓} {Enter} für allgemeine Suche.",
     "menu.auto_enable_sold_items": "Verkaufte Gegenstände automatisch aktivieren",
     "map.tips": "Tipps",
     "map.remove_add": "Von Karte entfernen/hinzufügen",
@@ -1463,6 +1464,7 @@
     "menu.show_import_export": "Import/Export-Einstellungen anzeigen",
     "menu.show_debug": "Debug-Einstellungen anzeigen",
     "menu.enable_cycle_input": "Manuelle Zykluseingabe aktivieren",
+    "menu.override_browser_search": "Browser-Suche überschreiben",
     "menu.show_all_cycles_markers": "Alle Markierungen anzeigen",
     "menu.enable_context_menu": "Kontextmenü aktivieren",
     "menu.marker_color.header": "Benutzerdefinierte Farben für Markierungen",
@@ -1685,6 +1687,7 @@
     "menu.filter_type.important_items": "Wichtige Gegenstände",
     "menu.filter_type.only_static": "Nur statisch",
     "menu.filter_type.all_coins_spots": "Alle möglichen Spawnpunkte von Münzen",
+    "menu.filter_type.hide_flowers": "Keine Schwarzbrenner-Zutaten ausblenden",
     "menu.filter_type.low_amount_items": "Keine Gegenstände im Inventar",
     "menu.filter_type.low_amount_items_and_random": "Nur wenige Inventar Items + zufällige Punkte",
     "menu.join_discord": "Tritt unserem Discord Server bei!",
@@ -1905,6 +1908,7 @@
     "help.custom_marker_color_modal": "Ermöglicht das Festlegen der benutzerdefinierten Farbe für jede Markierungskategorie.",
     "menu.fossils_random": "Zufälliges Fossil ",
     "menu.jewelry_random": "Zufälliges Schmuckstück",
+    "menu.random_spot_metal_detector_chest": "Orte für zufällige Kisten (Metalldetektor)",
     "help.filter_min_amount_items": "Ermöglicht es Ihnen, die maximale Anzahl von Elementen in Ihrem Bestand als \"Artikel mit niedriger Lagerbestandsmenge\" festzulegen.",
     "menu.filter_min_amount_items": "Nur Artikel anzeigen, die niedriger sind als",
     "menu.sponsors": "Sponsoren",
