--- a/langs/he.json
+++ b/langs/he.json
@@ -624,7 +624,7 @@
     "arrowhead_random_5_5.desc": "ליד העצים שבצד של הכביש.",
     "arrowhead_random_2_6.desc": "מאחורי צריף על ידי כמה גלגלי עגלה שבורים.",
     "provision_arrowhead_raw.name": "ראש חץ Slate",
-    "arrowhead_random_7_1.desc": "מתחת לעץ עם לוכדי החלומות.",
+    "arrowhead_random_7_1.desc": "מתחת לעץ עם בקבוקים תלויים.",
     "arrowhead_random_11_2.desc": "מאחורי הצריפים.",
     "arrowhead_random_5_3.desc": "מול עץ על קו החוף של נחל קטן.",
     "arrowhead_random_11_4.desc": "בבסיס עץ ליד שלולית.",
@@ -739,6 +739,8 @@
     "provision_hrlm_brush_boar_4.desc": "על ספסל בצד שמאל של הבית.",
     "provision_hrlm_brush_boar_5.desc": "בארון שינה ירוק בחדר השינה מאחורה.",
     "provision_hrlm_brush_boar_6.desc": "בתיבה ליד הכניסה הדרומית של הבית.",
+    "provision_hrlm_brush_rosewood_ng_1.desc": "על כסא בחדר בקומת קרקע\n",
+    "provision_hrlm_brush_rosewood_ng_2.desc": "בחדר 1B מאחורה בקומת קרקע על השידה עם המראה",
     "jewelry_random_0_1.desc": "על ידי עץ מת מפוצל.",
     "jewelry_random_1_5.desc": "על ידי עץ מת מפוצל.",
     "provision_jewelry_moon_ring_6.desc": "על מדף אחסון בבקתה.",
